存在一个前台跳转至后台页面的错误，等待修复 完成对前台和后台页面的分离 前台页面在：jspTest/web下面 后台页面在：jspTest/manage下面 后台的所有servlet放到了:cn.edu.zzti.servlet下面，前台后台使用相同的servlet